# WinBlueScreen

./: CMakeLists.txt  README.md
res/: WinBlueScreen.aps  WinBlueScreen.rc
src/: blueScreen.cpp  blueScreen.h  main.cpp  resource.h  winGUI.cpp  winGUI.h
